Fix grid overflow

--- a/src/pages/CharacterDetail/index.scss
+++ b/src/pages/CharacterDetail/index.scss
@@ -20,6 +20,7 @@
 
   display: grid;
   gap: 0.5rem;
+  grid-template-columns: 100%;
   grid-template-areas:
     'header'
     'model'
